--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,11 @@
 {
   "postman.settings.dotenv-detection-notification-visibility": false,
   "typescript.tsdk": "node_modules/typescript/lib",
-  "prisma.pinToPrisma6": true
+  "prisma.pinToPrisma6": true,
+  "editor.formatOnSave": false,
+  "editor.codeActionsOnSave": {
+    "source.fixAll.eslint": "explicit"
+  },
+  "eslint.useFlatConfig": true,
+  "eslint.validate": ["javascript", "javascriptreact", "typescript", "typescriptreact"]
 }
