--- a/package.json
+++ b/package.json
@@ -7,29 +7,14 @@
   "license": "UNLICENSED",
   "scripts": {
     "build": "nest build",
-    "format": "prettier --write \"apps/**/*.ts\" \"libs/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/apps/api-gateway/main",
-    "lint:libs": "eslint libs --fix",
-    "lint:all": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "lint:analytics": "eslint apps/analytics --fix",
-    "lint:api-gateway": "eslint apps/api-gateway --fix",
-    "lint:authz": "eslint apps/authz --fix",
-    "lint:channel": "eslint apps/channel --fix",
-    "lint:comments": "eslint apps/comments --fix",
-    "lint:email": "eslint apps/email --fix",
-    "lint:history": "eslint apps/history --fix",
-    "lint:playlist": "eslint apps/playlist --fix",
-    "lint:projection": "eslint apps/projection --fix",
-    "lint:query": "eslint apps/query --fix",
-    "lint:reaction": "eslint apps/reaction --fix",
-    "lint:subscribe": "eslint apps/subscribe --fix",
-    "lint:users": "eslint apps/users --fix",
-    "lint:video-transcoder": "eslint apps/video-transcoder --fix",
-    "lint:videos": "eslint apps/videos --fix",
-    "lint:views": "eslint apps/views --fix",
+    "format": "prettier --write \"apps/**/*.ts\" \"libs/**/*.ts\"",
+    "format:check": "prettier --check \"**/*.{ts,tsx,js,jsx,json,md}\"",
+    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\"",
+    "lint:fix": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
@@ -47,7 +32,8 @@
     "prisma:init": "ts-node scripts/init-prisma.script.ts",
     "prisma:generate:client": "ts-node scripts/generate-client.script.ts",
     "prisma:generate:migrations": "ts-node scripts/generate-migrations.script.ts",
-    "grpc:generate:proto": "ts-node scripts/generate-prototype.script.ts"
+    "grpc:generate:proto": "ts-node scripts/generate-prototype.script.ts",
+    "prepare": "husky"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.848.0",
@@ -115,6 +101,8 @@
     "zod": "^4.1.3"
   },
   "devDependencies": {
+    "@commitlint/cli": "^20.2.0",
+    "@commitlint/config-conventional": "^20.2.0",
     "@eslint/eslintrc": "^3.2.0",
     "@eslint/js": "^9.18.0",
     "@nestjs/cli": "^11.0.10",
@@ -139,7 +127,9 @@
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-prettier": "^5.2.2",
     "globals": "^16.0.0",
+    "husky": "^9.1.7",
     "jest": "^29.7.0",
+    "lint-staged": "^16.2.7",
     "prettier": "^3.4.2",
     "prisma": "6.14.0",
     "source-map-support": "^0.5.21",
