--- a/.github/workflows/template-ci.yml
+++ b/.github/workflows/template-ci.yml
@@ -7,7 +7,7 @@ on:
         required: true
         type: string
       generate-prisma:
-        description: "Set to true if this service requires Prisma Client generation"
+        description: 'Set to true if this service requires Prisma Client generation'
         required: false
         type: boolean
         default: false
@@ -17,35 +17,50 @@ on:
       DOCKERHUB_TOKEN:
         required: true
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   pipeline:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
+      - name: Get the latest code
+        uses: actions/checkout@v4
+      - name: Setup node
+        uses: actions/setup-node@v4
         with:
-          node-version: "20"
-          cache: "yarn"
-      - run: yarn install --frozen-lockfile
+          node-version: '20'
+          cache: 'yarn'
+      - name: Install all dependencies
+        run: yarn install --frozen-lockfile
 
       - name: Generate Prisma Client
         if: ${{ inputs.generate-prisma == true }}
         run: npx prisma generate --schema=apps/${{ inputs.service-name }}/prisma/schema.prisma
 
-      - run: yarn lint:${{ inputs.service-name }}
-      - run: yarn lint:libs
-      - run: yarn test apps/${{ inputs.service-name }}
+      - name: Lint the application
+        run: yarn lint
 
-      - uses: docker/setup-buildx-action@v3
-      - uses: docker/login-action@v3
+      - name: Test the application
+        run: yarn test apps/${{ inputs.service-name }}
+
+      - name: Setup docker build
+        uses: docker/setup-buildx-action@v3
+
+      - name: Login to docker hub
+        if: ${{ github.ref == 'refs/heads/main' }}
+        uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-      - uses: docker/build-push-action@v5
+
+      - name: Build and push to docker hub
+        uses: docker/build-push-action@v5
         with:
           context: .
           file: ./apps/${{ inputs.service-name }}/Dockerfile
-          push: true
+          push: ${{ github.ref == 'refs/heads/main' }}
           tags: |
             ${{ secrets.DOCKERHUB_USERNAME }}/streamforge-${{ inputs.service-name }}:latest
             ${{ secrets.DOCKERHUB_USERNAME }}/streamforge-${{ inputs.service-name }}:${{ github.sha }}
