--- a/package.json
+++ b/package.json
@@ -103,8 +103,9 @@
     "@nestjs/schematics": "^11.0.0",
     "@nestjs/testing": "^11.0.1",
     "@swc-node/register": "^1.11.1",
-    "@swc/cli": "^0.7.9",
-    "@swc/core": "^1.15.3",
+    "@swc/cli": "^0.7.10",
+    "@swc/core": "^1.15.10",
+    "@swc/jest": "^0.2.39",
     "@testcontainers/postgresql": "^11.10.0",
     "@types/express": "^5.0.0",
     "@types/express-session": "^1.18.2",
@@ -128,6 +129,7 @@
     "prisma": "6.14.0",
     "source-map-support": "^0.5.21",
     "supertest": "^7.0.0",
+    "swc-loader": "^0.2.7",
     "ts-jest": "^29.4.6",
     "ts-loader": "^9.5.2",
     "ts-node": "^10.9.2",
